Fix minitoc alignment

--- a/source/stylesheets/guide/blocks/minitoc.sass
+++ b/source/stylesheets/guide/blocks/minitoc.sass
@@ -1,7 +1,11 @@
 @import ../../environment
 
+.minitoc
+  margin-bottom: $BLOCK_SPACING
+
+
 .minitoc__heading
-  +hide-first-margins
+  +hide-margins-y
 
 .minitoc__items
   flex: 1 1 auto
